change: inventory treshold to units (refactor naming, to be more expressive) add: internally produced flag to products and exclude them from the shopping list

--- a/inventory/templates/inventory_evaluation.html
+++ b/inventory/templates/inventory_evaluation.html
@@ -34,7 +34,7 @@
               <td>
                 {% for product_storage, data in product.get_product_storage.items %}
                   {% if product_storage == storage %}
-                    {% if data.oos %}
+                    {% if data.has_shortage %}
                     <span class="warning">
                     {% else %}
                     <span>
