--- a/iaroapp/static/css/tables.css
+++ b/iaroapp/static/css/tables.css
@@ -48,7 +48,8 @@ table tr.entry:hover {
     cursor: pointer;
 }
 .task-description {
-    background-color: rgba(236, 196, 55, 0.08);
+    width: 100%;
+    background-color: var(--bs-secondary);
     flex-wrap: wrap;
     flex-direction: column;
     word-wrap: break-word;
@@ -57,6 +58,12 @@ table tr.entry:hover {
     align-content: flex-start;
     text-align: left;
     padding: 0.4rem;
+}
+.task-description table {
+    width: 266px !important;
+}
+.task-description table td {
+    padding: 8px;
 }
 .task-description h1 {
     display: none; /* todo: fix styles in editor and remove this property */
@@ -137,7 +144,6 @@ table tr.entry:hover {
             margin: 0 !important;
             scale: 0.85;
         }
-
     }
 
     @media (max-width: 629px) {
