--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% load json_filters %}
 
+{% block extra_css %}
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+{% endblock extra_css %}
+
 {% block content %}
 
 <div class="alert alert-success hidden" role="alert">
@@ -178,6 +182,62 @@
     <div class="col-lg-4 mb-4">
         <div class="card z-index-2">
             <div class="card-header pb-0">
+                <h6>Popular Times</h6>
+                <div class="live__container d-flex align-left">
+                    <div class="video__icon">
+                        <div class="circle--outer"></div>
+                        <div class="circle--inner"></div>
+                    </div>
+                    <p class="text-sm">
+                        <span class="predict__info"></span>
+                    </p>
+                </div>
+
+            </div>
+
+            <div class="card-body p-3">
+                <div class="text-bold align-center justify-content-center gap-1 d-flex"
+                     id="chartLegend">
+                </div>
+
+                <div class="chart">
+                    <canvas id="populartimesChart" class="chart-canvas" height="300"></canvas>
+                </div>
+                <div class="d-flex justify-content-center align-items-center">
+                    <span data-feather="clock" class="align-text-bottom"
+                          style="height: 15px"></span>
+
+                    <div class="d-flex">
+                        &nbsp;People spend
+                        <span class="text-bold">&nbsp;{{ time_spent.0 }}-{{ time_spent.1 }} min&nbsp;</span>
+                        today
+                    </div>
+                </div>
+            </div>
+
+            <form class="d-flex justify-content-center gap-2 mb-4" method="GET" action="{% url 'index' %}">
+                <input type="hidden" name="formatted_address" id="formatted_address"
+                       value="{{ request.GET.formatted_address|default:'Iaro West Sophienstraße 108' }}">
+
+                <button class="text-bold mt-3 w-35 {% if request.GET.formatted_address == 'Iaro Ost Karlsruhe' %}btn-active{% else %}btn-default{% endif %}"
+                        type="submit"
+                        onclick="document.getElementById('formatted_address').value='Iaro Ost Karlsruhe';">
+                    Iaro Ost
+                </button>
+
+                <button class="text-bold mt-3 w-35 {% if request.GET.formatted_address == 'Iaro West Karlsruhe' %}btn-active{% else %}btn-default{% endif %}"
+                        type="submit"
+                        onclick="document.getElementById('formatted_address').value='Iaro West Karlsruhe';">
+                    Iaro West
+                </button>
+            </form>
+
+        </div>
+    </div>
+
+    <div class="col-lg-4 mb-4">
+        <div class="card z-index-2">
+            <div class="card-header pb-0">
                 <h6>Your work hours: last 7 days</h6>
                 <p class="text-sm">
                     <i class="fa fa-clock text-success"></i>
@@ -277,6 +337,126 @@
     </div>
 </div>
 
+    <style>
+        .legend-item {
+            font-family: 'Inter', sans-serif !important;
+            color: #344767;
+            transition: color 0.3s;
+        }
+
+        .active-day {
+            color: #82d616 !important;
+        }
+
+        .btn-default {
+            color: black;
+            justify-content: center;
+            display: flex;
+            border: none;
+            background: none;
+        }
+
+        .btn-active {
+            color: #82d616 !important;
+            justify-content: center;
+            display: flex;
+            border: none;
+            background: none;
+
+        }
+
+        .predict__info {
+            position: relative;
+            margin-left: 1.5rem;
+            top: 0.2rem;
+
+        }
+
+        *:before, *:after {
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+        }
+
+        .video__icon {
+            position: absolute;
+            scale: 0.5;
+            width: 50px;
+            left: 8px;
+            top: 50px;
+        }
+
+        .video__icon .circle--outer {
+            border: 1px solid #82d616;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            margin: 0 auto 5px;
+            position: relative;
+            opacity: .8;
+            -webkit-animation: circle 2s ease-in-out infinite;
+            animation: circle 2s ease-in-out infinite;
+        }
+
+        .video__icon .circle--inner {
+            background: #82d616;
+            left: 15px;
+            top: 10px;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            position: absolute;
+            opacity: .8;
+        }
+
+        .video__icon .circle--inner:after {
+            content: '';
+            display: block;
+            border: 2px solid #82d616;
+            border-radius: 50%;
+            width: 28px;
+            height: 28px;
+            top: -4px;
+            left: -4px;
+            position: absolute;
+            opacity: .8;
+            -webkit-animation: circle 2s ease-in-out .2s infinite;
+            animation: circle 2s ease-in-out .2s infinite;
+        }
+
+        .video__icon p {
+            color: #000;
+            text-align: center;
+        }
+
+        @-webkit-keyframes circle {
+            from {
+                -webkit-transform: scale(1);
+                transform: scale(1);
+            }
+
+            to {
+                -webkit-transform: scale(1.5);
+                transform: scale(1.5);
+                opacity: 0;
+            }
+        }
+
+        @keyframes circle {
+            from {
+                -webkit-transform: scale(1);
+                transform: scale(1);
+            }
+
+            to {
+                -webkit-transform: scale(1.5);
+                transform: scale(1.5);
+                opacity: 0;
+            }
+        }
+
+
+    </style>
 
 <style>
     .btn-link {
@@ -445,6 +625,14 @@
 
     });
 </script>
+
+<script>
+    // Need to keep global for PopularTimes Chart
+    var populartimesData = JSON.parse('{{ populartimes_json | safe }}');
+    const currentLivePopularity = JSON.parse('{{ currentivepopularity_json | safe }}');
+    const livePopularity = JSON.parse('{{ currentivepopularity_json | safe }}');
+</script>
+<script src="{% static 'js/charts_populartimes.js' %}"></script>
 
 <script src="{% static 'softTheme/js/plugins/chartjs.min.js' %}"></script>
 <script>
