--- a/iaroapp/templates/includes/sidebar.html
+++ b/iaroapp/templates/includes/sidebar.html
@@ -96,6 +96,15 @@
                     </a>
                 </li>
 
+                <li class="nav-item">
+                    <a class="nav-link {% if '/inventory/production' == request.path %} active {% endif %} " href=" {% url 'inventory_production' %}">
+                        <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
+                            <span data-feather="file-text" class="align-text-bottom"></span>
+                        </div>
+                        <span class="nav-link-text ms-1">Production</span>
+                    </a>
+                </li>
+
                 {% if user.is_superuser %}
                     <li class="nav-item">
                         <a class="nav-link {% if '/inventory/evaluation' == request.path %} active {% endif %} " href=" {% url 'inventory_evaluation' %}">
