--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -346,6 +346,7 @@
     }
 
     .btn-default {
+        color: black;
         justify-content: center;
         display: flex;
         border: none;
