--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -81,7 +81,7 @@
                                         </h6>
                                     </div>
                                     <div class="d-flex">
-                                        <small class="d-block px-1 text-muted text-xs opacity-7 text-secondary responsive__mobile-3">
+                                        <small class="d-block px-1 text-xs opacity-7 responsive__mobile-3">
                                             <span data-feather="tag" class="align-text-bottom"
                                                   style="height: 16px"></span>
                                             {{ form.instance.get_types|join:", " }}
@@ -94,7 +94,7 @@
                                         </small>
                                     </div>
                                     {% if form.instance.summary %}
-                                        <div class="d-flex px-1 py-1 align-items-center no-select descriptionLink">
+                                        <div class="d-flex text-sm px-1 py-1 align-items-center no-select descriptionLink">
 
                                             <span class="" data-feather="chevron-right"></span>
                                             Description
@@ -103,7 +103,7 @@
                                         </div>
                                                                     {% endif %}
                                     <!-- Inside your for loop for each task -->
-                                    <div class="ml-4 task-description" style="display: none;"></div>
+                                    <div class="ml-4 card rounded-0 task-description" style="display: none;"></div>
                                 </td>
                             </tr>
                             {% endif %}
