redesign: inventory page. fix: font, some colors, other ui

--- a/iaroapp/static/css/styles.css
+++ b/iaroapp/static/css/styles.css
@@ -146,3 +146,7 @@ body.dark-page .navbar-brand-img {
 .alert-success {
   --bs-alert-bg: var(--bs-success);
 }
+
+.card .card-body {
+  font-family: 'Inter', sans-serif !important;
+}
