--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -38,10 +38,10 @@
     {% include "includes/navigation.html" %}
 
     <div class="container-fluid px-4">
-        <div class="title d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-2">
+        <div class="title d-flex justify-content-end align-items-center py-2">
             <div class="leftTitle">
                 {% if modifiedDate %}
-                <div class="btn-toolbar mb-md-0 text-sm">
+                <div class="btn-toolbar mb-md-0 text-xs align-items-center">
                     <span data-feather="calendar" class="align-text-bottom"> </span>
                     &nbsp;Last updated: {{ modifiedDate }}
                 </div>
