--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -2,7 +2,7 @@
 
 {% block widgets %}
 <div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    <button class="btn bg-gradient-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
         {{ branch }}
     </button>
     <ul class="dropdown-menu dropdown-menu-end">
@@ -14,80 +14,119 @@
 {% endblock %}
 
 {% block content %}
+    <div class="row">
+        <div class="col-12">
+            <div class="card mb-4">
+                <div class="card-body px-0 pt-0 pb-2">
 
-<div class="list-group w-auto">
-    <form id="product_form" method="post">
-        {% csrf_token %}
-        {{ formset.management_form }}
-        <div id="accordion">
-            {% for storage in storages %}
-            <div class="card">
-                <div class="card-header">
-                    <a class="btn" data-bs-toggle="collapse" href="#inventoryList_{{ storage.id }}">
-                        <svg class="bi" width="24" height="24" style="color: {{ storage.color }};">
-                            <use xlink:href="#x-circle-fill">
-                                <symbol id="x-circle-fill" viewBox="0 0 24 24">
-                                    <circle cx="12" cy="12" r="8"/>
-                                </symbol>
-                            </use>
-                        </svg>
-                        <span>{{ storage.name }}</span>
-                    </a>
+                    <table class="table table-responsive p-0 align-items-center mb-2 table-collapse">
+
+                        <thead>
+                        <tr class="title">
+                            <th class="border-bottom-0" colspan="4">
+                                <h6>Target branch: {{ branch }}</h6>
+                            </th>
+                        </tr>
+                        </thead>
+
+                        <thead>
+                        <tr>
+                            <th class="w-4 text-center text-uppercase text-secondary text-xxs font-weight-bolder align-middle responsive__mobile-1">
+                                Select Storage
+                            </th>
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                        <form id="product_form" method="post">
+                            {% csrf_token %}
+                            {{ formset.management_form }}
+                            {% for storage in storages %}
+                                <tr class="entry">
+                                    <td style="height: 40px; white-space: normal !important;">
+
+                                        <a data-bs-toggle="collapse"
+                                           href="#inventoryList_{{ storage.id }}">
+                                            <div class="d-flex align-items-center">
+                                                <svg class="bi" width="16" height="16">
+                                                    <circle cx="8" cy="8" r="7" fill="{{ storage.color }}"
+                                                            stroke="#cbd3da"></circle>
+                                                </svg>
+
+                                                <h6 class="mb-0 mx-2 text-sm responsive__mobile-3">
+                                                    {{ storage.name }}
+                                                </h6>
+                                            </div>
+                                        </a>
+
+                                        <div id="inventoryList_{{ storage.id }}" class="collapse"
+                                             data-bs-parent="#accordion">
+                                            <div class="card-body p-2">
+                                                {% for form in formset %}
+                                                    {% if storage in form.instance.storages %}
+                                                        <a class="list-group-item align-items-center list-group-item-action d-flex gap-2 py-2"
+                                                           aria-current="true" style="width: 100%">
+                                                          <span style="font-size: 1rem">
+                                                            📦
+                                                          </span>
+                                                            <input type="number"
+                                                                   name="product_{{ form.instance.id }}"
+                                                                   value="{{ form.instance.id }}"
+                                                                   style="display: none;"/>
+                                                            <input type="number"
+                                                                   name="storage_{{ storage.id }}"
+                                                                   value="{{ storage.id }}"
+                                                                   style="display: none;"/>
+                                                            <p class="text-sm mb-0 w-100 wrap text-break">
+                                                                {{ form.name.value }}
+                                                            </p>
+
+                                                            <input name="value_{{ form.instance.id }}_{{ storage.id }}"
+                                                                   type="text"
+                                                                   pattern="[0-9]+([.,][0-9]+)?"
+                                                                   inputmode="decimal"
+                                                                   class="form-control"
+                                                                   id="value" value=""
+                                                                   placeholder="{{ form.instance.unit.all | join:", " }}"
+                                                                   style="width: 100px; height: 34px; padding: 0.4rem; font-size: 16px; scale: 0.9;">
+                                                        </a>
+                                                    {% endif %}
+                                                {% endfor %}
+                                                <input type="submit"
+                                                       class="btn align-self-center bg-gradient-primary m-2"
+                                                       value="Submit inventory"/>
+
+                                            </div>
+                                        </div>
+
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        </form>
+                        </tbody>
+
+                    </table>
                 </div>
-                <div id="inventoryList_{{ storage.id }}" class="collapse" data-bs-parent="#accordion">
-                    <div class="card-body">
-                        {% for form in formset %}
-                        {% if storage in form.instance.storages %}
-                        <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
-                  <span style="font-size: 2rem">
-                    📦
-                  </span>
-                            <div class="d-flex gap-2 w-100 justify-content-between">
-                                <div>
-                                    <input type="number" name="product_{{ form.instance.id }}"
-                                           value="{{ form.instance.id }}" style="display: none;"/>
-                                    <input type="number" name="storage_{{ storage.id }}" value="{{ storage.id }}"
-                                           style="display: none;"/>
-                                    <h6 class="mb-0 wrap">
-                                        {{ form.name.value }}
-                                    </h6>
-                                    <p class="mb-0 opacity-75">
-                                    </p>
-                                </div>
-                                <div style="display: flex; flex-direction: row; gap: 0.5rem;">
-                                    <input name="value_{{ form.instance.id }}_{{ storage.id }}" type="text"
-                                           pattern="[0-9]+([.,][0-9]+)?" inputmode="decimal" class="form-control"
-                                           id="value" value="" style="width: 100px;">
-                                    <small class="opacity-50 text-nowrap truncate">
-                                        {{ form.instance.unit.all | join:", " }}
-                                    </small>
-                                </div>
-                            </div>
-                        </a>
-                        {% endif %}
-                        {% endfor %}
-                        <input type="submit" class="btn btn-primary" value="Submit inventory"/>
-                    </div>
-                </div>
+
             </div>
-            {% endfor %}
         </div>
-    </form>
+    </div>
+
 
     <div class="modal fade" id="submitInventoryModal" tabindex="-1" role="dialog"
          aria-labelledby="submitInventoryModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
+            <div class="modal-content card card-body">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="submitInventoryModalLabel">Warning</h5>
+                    <h6 class="modal-title" id="submitInventoryModalLabel">Warning</h6>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     Inventory have already been submitted for today. Are you sure you want to update it?
                 </div>
-                <div class="modal-footer">
+                <div class="modal-footer gap-2">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="confirmSubmit">Update inventory</button>
+                    <button type="button" class="btn bg-gradient-primary" id="confirmSubmit">Update inventory</button>
                 </div>
             </div>
         </div>
@@ -159,45 +198,7 @@
 
     <style>
 
-        .truncate {
-          width: 30px;
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ".";
-          font-size: 1rem;
-        }
-        .wrap {
-          overflow-wrap: anywhere;
-        }
-        .form-control:invalid {
-          color: navy;
-          outline: none;
-          border-color: #ff1050;
-          box-shadow: 0 0 10px #ff0000;
-        }
-        .done {
-          background-color: rgb(209, 231, 221);
-        }
-
-        .list-group-item-action:focus, .list-group-item-action:hover {
-          background-color: lightblue !important;
-        }
-
-        input[type=submit] {
-          margin: .75rem;
-          align-self: end;
-
-        }
-        a.btn {
-          display: flex;
-          padding-left: 0px;
-          text-align: left;
-        }
-        .card {
-          margin: .5rem 0;
-        }
         .card-body {
-          padding: 0px;
           display: flex;
           flex-direction: column;
         }
