--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -284,7 +284,7 @@
 
 
 <div class="modal fade modal-tour" tabindex="-1" role="dialog" id="errorModal">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content card card-body rounded-4 shadow">
             <div class="modal-body p-5">
                 <h2 class="fw-bold mb-0">Error</h2>
@@ -297,7 +297,7 @@
 
 
 <div class="modal fade modal-tour" tabindex="-1" role="dialog" id="submitModal">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content card card-body rounded-4 shadow">
             <div class="modal-body p-5">
                 <h2 class="fw-bold mb-0">
