--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -56,6 +56,8 @@
                                                 <h6 class="mb-0 mx-2 text-sm responsive__mobile-3">
                                                     {{ storage.name }}
                                                 </h6>
+                                                <span class="" data-feather="chevron-right"></span>
+
                                             </div>
                                         </a>
 
@@ -115,7 +117,7 @@
 
     <div class="modal fade" id="submitInventoryModal" tabindex="-1" role="dialog"
          aria-labelledby="submitInventoryModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content card card-body">
                 <div class="modal-header">
                     <h6 class="modal-title" id="submitInventoryModalLabel">Warning</h6>
