--- a/procedures/templates/procedures.html
+++ b/procedures/templates/procedures.html
@@ -115,7 +115,7 @@
 
 
 <div class="modal fade modal-tour" tabindex="-1" role="dialog" id="infoModal">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content rounded-4 shadow">
             <div class="modal-body p-5">
                 <h2 class="fw-bold mb-0">Task description</h2>
