--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -124,7 +124,7 @@
 
 <div class="modal fade" id="submitTasksModal" tabindex="-1" role="dialog"
      aria-labelledby="submitTasksModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="submitTasksModalLabel">Warning</h5>
@@ -142,7 +142,7 @@
 </div>
 
 <div class="modal fade modal-tour" tabindex="-1" role="dialog" id="infoModal">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content rounded-4 shadow">
             <div class="modal-body p-5">
                 <h2 class="fw-bold mb-0">Task description</h2>
