--- a/procedures/templates/procedures.html
+++ b/procedures/templates/procedures.html
@@ -2,7 +2,7 @@
 
 {% block widgets %}
 <div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    <button class="btn bg-gradient-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
         {{ branch }}
     </button>
     <ul class="dropdown-menu dropdown-menu-end">
