--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -38,7 +38,7 @@
     {% include "includes/navigation.html" %}
 
     <div class="container-fluid px-4">
-        <div class="title d-flex justify-content-end align-items-center py-2">
+        <div class="title d-flex justify-content-end align-items-center">
             <div class="leftTitle">
                 {% if modifiedDate %}
                 <div class="btn-toolbar mb-md-0 text-xs align-items-center">
