--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -86,7 +86,7 @@
                                                   style="height: 16px"></span>
                                             {{ form.instance.get_types|join:", " }}
                                             {% if form.instance.assignees %}
-                                                <br class="responsive__break" style="display: none;">
+                                                <!-- <br class="responsive__break" style="display: none;"> -->
                                             <span data-feather="user" class="align-text-bottom"
                                                   style="height: 16px"></span>
                                             {{ form.instance.assignees }}
